--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 client/node_modules/
-client/build/
+#client/build/
 client/.env
-client/package-lock.json
 node_modules/
 *.log
 .env
-package-lock.json
